--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "gulp-stylus": "^2.7.0",
     "gulp-uglify": "^3.0.0",
     "pump": "^3.0.0"
+  },
+  "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "jquery": "^3.3.1"
   }
 }
