--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "foundation-sites": "^6.4.3"
   }
 }
